--- a/style.css
+++ b/style.css
@@ -9,8 +9,15 @@
     }
     #menu li{
         font-family: "Rajdhani", sans-serif; 
-        color: white;
-        padding-right: 20px; 
+        color: rgb(0, 0, 0);
+        padding-right: 30px; 
+        font-weight: 600;
+        cursor: pointer;
+
+    }
+    #menu li:hover{
+        font-weight: 1000;
+        color: rgb(241, 0, 0);
     }
     #menuicon{
         display: none;
