--- a/style.css
+++ b/style.css
@@ -56,5 +56,32 @@
 
 /*  */
 
-    /* screen two */
-    
+    /* screen five */
+    .bgimg{
+        width: 100%;
+        height: 80vh;
+        background-position: center;
+        background-size: cover;
+        background-image: url("./bg2.avif");
+        background-attachment: fixed;
+        background-color: rgba(0, 0, 0, 0.6 );
+        background-blend-mode: multiply;
+        color: white;
+        align-items: center;
+    }
+    #scrn5-p{
+        text-align: justify;
+    }
+/* footer */
+    .footerbg{
+        width: 100%;
+       
+        background-position: center;
+        background-size: cover;
+        background-image: url("./bgimg1.webp");
+        background-attachment: fixed;
+        background-color: rgba(0, 0, 0, 0.6 );
+        background-blend-mode: multiply;
+        color: white;
+        align-items: center;
+    }
